futex.2: ERRORS: Improve description of EFAULT error
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -255,9 +255,12 @@ use the safe
 now.)
 .TP
 .B EFAULT
-Error retrieving
-.I timeout
-information from user space.
+A required pointer argument (i.e.,
+.IR uaddr ,
+.IR uaddr2 ,
+or
+.IR timeout )
+di not point to a valid user-space address.
 .TP
 .B EINTR
 A
