futex.2: ERRORS: Add EINVAL error for invalid timeout
Reported-by: Thomas Gleixner <tglx@linutronix.de>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -270,6 +270,17 @@ operation was interrupted by a signal (see
 or a spurious wakeup.
 .TP
 .B EINVAL
+.RB ( FUTEX_WAIT ,
+.BR FUTEX_WAIT_REQUEUE_PI )
+The supplied
+.I timeout
+argument was invalid
+.RI ( tv_sec
+was less than zero, or
+.IR tv_nsec
+was not less than 1000,000,000).
+.TP
+.B EINVAL
 Invalid argument.
 .TP
 .B ENFILE
