futex.2: ERRORS: add EWOULDBLOCK for FUTEX_WAIT atomic enqueueing failed
Reported-by: Thomas Gleixner <tglx@linutronix.de>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -302,6 +302,10 @@ Timeout during the
 operation.
 .TP
 .B EWOULDBLOCK
+.RB ( FUTEX_WAIT )
+The atomic enqueueing failed.
+.TP
+.B EWOULDBLOCK
 .I op
 was
 .BR FUTEX_WAIT
