futex.2: Reword ETIMEDOUT error
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -297,9 +297,8 @@ Invalid operation specified in
 .IR op .
 .TP
 .B ETIMEDOUT
-Timeout during the
-.B FUTEX_WAIT
-operation.
+.RB ( FUTEX_WAIT )
+The operation timed out.
 .TP
 .B EWOULDBLOCK
 .RB ( FUTEX_WAIT )
