futex.2: Add FUTEX_WAKE to EINVAL error for 'uaddr' not 4-byte aligned
Reported-by: Thomas Gleixner <tglx@linutronix.de>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -281,7 +281,8 @@ was less than zero, or
 was not less than 1000,000,000).
 .TP
 .B EINVAL
-.RB ( FUTEX_WAIT )
+.RB ( FUTEX_WAIT ,
+.BR FUTEX_WAKE )
 .I uaddr
 does not point to a valid object\(emthat is,
 the address is not 4-byte-aligned.
