futex.2: ERRORS: add EINVAL error for FUTEX_WAIT inconsistent state case
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -288,6 +288,13 @@ does not point to a valid object\(emthat is,
 the address is not 4-byte-aligned.
 .TP
 .B EINVAL
+.RB ( FUTEX_WAKE )
+The kernel detected ian inconsistency between the user-space state at
+.I uaddr
+and the kernel state\(emthat is, it detected a waiter which waits in
+.BR FUTEX_LOCK_PI .
+.TP
+.B EINVAL
 Invalid argument.
 .TP
 .B ENFILE
