--- a/man2/futex.2
+++ b/man2/futex.2
@@ -260,7 +260,7 @@ A required pointer argument (i.e.,
 .IR uaddr2 ,
 or
 .IR timeout )
-di not point to a valid user-space address.
+did not point to a valid user-space address.
 .TP
 .B EINTR
 A
@@ -289,7 +289,7 @@ the address is not 4-byte-aligned.
 .TP
 .B EINVAL
 .RB ( FUTEX_WAKE )
-The kernel detected ian inconsistency between the user-space state at
+The kernel detected an inconsistency between the user-space state at
 .I uaddr
 and the kernel state\(emthat is, it detected a waiter which waits in
 .BR FUTEX_LOCK_PI .
