futex.2: Rework description of arguments for FUTEX_REQUEUE
Reported-by: Thomas Gleixner <tglx@linutronix.de>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -189,16 +189,26 @@ This operation was introduced in order to avoid a "thundering herd" effect
 when
 .B FUTEX_WAKE
 is used and all processes woken up need to acquire another futex.
-This call wakes up
+The argument
 .I val
-processes, and requeues all other waiters on the futex at address
-.IR uaddr2 .
-
-The arguments
+contains the number of waiters on
+.I uaddr
+that are immediately woken up.
+The
 .I timeout
-and
+argument is (ab)used to specify the number of waiters
+that are requeued to the futex at
+.IR uaddr2 ;
+the kernel casts the
+.I timeout
+value to
+.IR u32 .
+.\" FIXME What are the constraints (if any) on the values of 'val' vs
+.\" 'timeout' vs [the number of waites on 'uaddr']?
+
+The argument
 .I val3
-are ignored.
+is ignored.
 .TP
 .BR FUTEX_CMP_REQUEUE " (since Linux 2.6.7)"
 There was a race in the intended use of
