futex.2: ERRORS: add FUTEX_REQUEUE to EINVAL for non-4-byte aligned address
Reported-by Thomas Gleixner <tglx@linutronix.de>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -297,8 +297,12 @@ was not less than 1000,000,000).
 .TP
 .B EINVAL
 .RB ( FUTEX_WAIT ,
-.BR FUTEX_WAKE )
+.BR FUTEX_WAKE ,
+.BR FUTEX_REQUEUE )
 .I uaddr
+or (for
+.BR FUTEX_REQUEUE )
+.I uaddr2
 does not point to a valid object\(emthat is,
 the address is not 4-byte-aligned.
 .TP
