--- a/man2/futex.2
+++ b/man2/futex.2
@@ -307,7 +307,8 @@ does not point to a valid object\(emthat is,
 the address is not 4-byte-aligned.
 .TP
 .B EINVAL
-.RB ( FUTEX_WAKE )
+.RB ( FUTEX_WAKE ,
+.BR FUTEX_REQUEUE )
 The kernel detected an inconsistency between the user-space state at
 .I uaddr
 and the kernel state\(emthat is, it detected a waiter which waits in
