futex.2: ERRORS: add EINVAL for FUTEX_REQUEUE to same futex
Reported-by: Thomas Gleixner <tglx@linutronix.de>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -315,6 +315,15 @@ and the kernel state\(emthat is, it detected a waiter which waits in
 .BR FUTEX_LOCK_PI .
 .TP
 .B EINVAL
+.RB ( FUTEX_REQUEUE )
+.\" FIXME tglx suggested adding this, but does this error really
+.\"       occur for FUTEX_REQUEUE?
+.I uaddr
+equals
+.IR uaddr2
+(i.e., an attempt was made to requeue to the same futex).
+.TP
+.B EINVAL
 Invalid argument.
 .TP
 .B ENFILE
