--- a/man2/futex.2
+++ b/man2/futex.2
@@ -216,7 +216,7 @@ There was a race in the intended use of
 so
 .B FUTEX_CMP_REQUEUE
 was introduced.
-This is similar to
+This operation is similar to
 .BR FUTEX_REQUEUE ,
 but first checks whether the location
 .I uaddr
@@ -225,9 +225,14 @@ still contains the value
 If not, the operation fails with the error
 .BR EAGAIN .
 
-The argument
+The arguments
+.IR val ,
+.IR uaddr ,
+.IR uaddr2 ,
+and
 .I timeout
-is ignored.
+are as for
+.BR FUTEX_REQUEUE .
 .SH RETURN VALUE
 .PP
 In the event of an error, all operations return \-1, and set
