futex.2: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -216,6 +216,8 @@ There was a race in the intended use of
 so
 .B FUTEX_CMP_REQUEUE
 was introduced.
+.\" FIXME should there be a stetement in the description of FUTEX_REQUEUE
+.\" FUTEX_REQUEUE to say that it should be avoided in favor of FUTEX_CMP_REQUEUE?
 This operation is similar to
 .BR FUTEX_REQUEUE ,
 but first checks whether the location
