--- a/man2/futex.2
+++ b/man2/futex.2
@@ -217,7 +217,7 @@ so
 .B FUTEX_CMP_REQUEUE
 was introduced.
 .\" FIXME should there be a stetement in the description of FUTEX_REQUEUE
-.\" FUTEX_REQUEUE to say that it should be avoided in favor of FUTEX_CMP_REQUEUE?
+.\" to say that it should be avoided in favor of FUTEX_CMP_REQUEUE?
 This operation is similar to
 .BR FUTEX_REQUEUE ,
 but first checks whether the location
@@ -305,10 +305,13 @@ was not less than 1000,000,000).
 .B EINVAL
 .RB ( FUTEX_WAIT ,
 .BR FUTEX_WAKE ,
-.BR FUTEX_REQUEUE )
+.BR FUTEX_REQUEUE ,
+.BR FUTEX_CMP_REQUEUE )
 .I uaddr
 or (for
-.BR FUTEX_REQUEUE )
+.BR FUTEX_REQUEUE 
+and
+.BR FUTEX_CMP_REQUEUE )
 .I uaddr2
 does not point to a valid object\(emthat is,
 the address is not 4-byte-aligned.
