futex.2: ERRORS: add FUTEX_CMP_REQUEUE to EINVAL inconsistent state case
Reported-by: Thomas Gleixner <tglx@linutronix.de>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -318,7 +318,8 @@ the address is not 4-byte-aligned.
 .TP
 .B EINVAL
 .RB ( FUTEX_WAKE ,
-.BR FUTEX_REQUEUE )
+.BR FUTEX_REQUEUE ,
+.BR FUTEX_CMP_REQUEUE )
 The kernel detected an inconsistency between the user-space state at
 .I uaddr
 and the kernel state\(emthat is, it detected a waiter which waits in
