futex.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -271,6 +271,7 @@ detected that the value pointed to by
 .I uaddr
 is not equal to the expected value
 .IR val3 .
+.\" FIXME: Is the following sentence correct?
 (This probably indicates a race;
 use the safe
 .B FUTEX_WAKE
