--- a/man3/a64l.3
+++ b/man3/a64l.3
@@ -1,3 +1,4 @@
+\t
 .\" Copyright 2002 walter harms (walter.harms@informatik.uni-oldenburg.de)
 .\"
 .\" %%%LICENSE_START(GPL_NOVERSION_ONELINE)
@@ -60,14 +61,20 @@ a-z	represent 38-63
 .RE
 So 123 = 59*64^0 + 1*64^1 = "v/".
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR l64a ()
-function is not thread-safe.
-.LP
-The
+T}	Thread safety	MT-Unsafe
+T{
 .BR a64l ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
