--- a/man3/abort.3
+++ b/man3/abort.3
@@ -73,10 +73,17 @@ The
 .BR abort ()
 function never returns.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR abort ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001, POSIX.1-2008, 4.3BSD, C89, C99.
 .SH SEE ALSO
