--- a/man3/abs.3
+++ b/man3/abs.3
@@ -80,14 +80,22 @@ appropriate integer type for the function.
 Returns the absolute value of the integer argument, of the appropriate
 integer type for the function.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.ad l
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR abs (),
 .BR labs (),
 .BR llabs (),
-and
 .BR imaxabs ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
+.ad
 .SH CONFORMING TO
 SVr4, POSIX.1-2001, 4.3BSD, C99.
 .\" POSIX.1 (1996 edition) requires only the
