--- a/man3/atof.3
+++ b/man3/atof.3
@@ -56,12 +56,17 @@ does not detect errors.
 The converted value.
 .SH ATTRIBUTES
 .SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR atof ()
-function is thread-safe with exceptions.
-It can be safely used in multithreaded applications, as long as
-.BR setlocale (3)
-is not called to change the locale during its execution.
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001, 4.3BSD, C89, C99.
 .SH SEE ALSO
