bindresvport.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/bindresvport.3
+++ b/man3/bindresvport.3
@@ -90,17 +90,27 @@ is not NULL and
 is not
 .BR AF_INET .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-Before glibc 2.17, the
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l lw23.
+Interface	Attribute	Value
+T{
 .BR bindresvport ()
-function uses a static variable that is not protected,
-so it is not thread-safe.
-
-Since glibc 2.17,
+T}	Thread safety	T{
+glibc >= 2.17: MT-Safe
 .\" commit f6da27e53695ad1cc0e2a9490358decbbfdff5e5
-the
+.br
+glibc < 2.17: MT-Unsafe
+T}
+.TE
+.PP
+The
 .BR bindresvport ()
-function uses a lock to protect the static variable, so it is thread-safe.
+function uses a static variable that was not protected by a lock
+before glibc 2.17, rendering the function MT-Unsafe.
 .SH CONFORMING TO
 Not in POSIX.1-2001.
 Present on the BSDs, Solaris, and many other systems.
