drand48.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/drand48.3
+++ b/man3/drand48.3
@@ -243,8 +243,15 @@ will restore the standard values of
 and
 .IR c .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.ad l
+.TS
+allbox;
+lb lb lb
+lw32 l l.
+Interface	Attribute	Value
+T{
 .BR drand48 (),
 .BR erand48 (),
 .BR lrand48 (),
@@ -253,8 +260,14 @@ The
 .BR jrand48 (),
 .BR srand48 (),
 .BR seed48 (),
-and
 .BR lcong48 ()
+T}	Thread safety	T{
+MT-Unsafe
+T}
+.TE
+.ad
+.PP
+The above
 functions record global state information for the random number generator,
 so they are not thread-safe.
 .SH CONFORMING TO
