fenv.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fenv.3
+++ b/man3/fenv.3
@@ -263,8 +263,16 @@ These functions return zero on success and nonzero if an error occurred.
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.nh
+.ad l
+.TS
+allbox;
+lb lb lb
+lw38 l l.
+Interface	Attribute	Value
+T{
 .BR feclearexcept (),
 .BR fegetexceptflag (),
 .BR fegetexceptflag (),
@@ -278,9 +286,13 @@ The
 .BR feupdateenv (),
 .BR feenableexcept (),
 .BR fedisableexcept (),
-and
 .BR fegetexcept ()
-functions are thread-safe.
+T}	Thread safety	T{
+MT-Safe
+T}
+.TE
+.ad
+.hy
 .SH CONFORMING TO
 IEC 60559 (IEC 559:1989), ANSI/IEEE 854, C99, POSIX.1-2001.
 .SH NOTES
