pthread_setcancelstate.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/pthread_setcancelstate.3
+++ b/man3/pthread_setcancelstate.3
@@ -111,12 +111,23 @@ Invalid value for
 .\" .SH VERSIONS
 .\" Available since glibc 2.0
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR pthread_setcancelstate ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.ad l
+.TS
+allbox;
+lb lb lb
+lw25 l l.
+Interface	Attribute	Value
+T{
+.BR pthread_setcancelstate (),
 .BR pthread_setcanceltype ()
-functions are thread-safe.
+T}	Thread safety	T{
+MT-Safe
+T}
+.TE
+.ad
+.hy
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
