pthread_setcancelstate.3: Add async-signal-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/pthread_setcancelstate.3
+++ b/man3/pthread_setcancelstate.3
@@ -125,6 +125,12 @@ T{
 T}	Thread safety	T{
 MT-Safe
 T}
+T{
+.BR pthread_setcancelstate (),
+.BR pthread_setcanceltype ()
+T}	Async-cancel-safety	T{
+AC-Safe
+T}
 .TE
 .ad
 .hy
