--- a/man3/atan.3
+++ b/man3/atan.3
@@ -94,13 +94,19 @@ is positive infinity (negative infinity), +pi/2 (\-pi/2) is returned.
 .SH ERRORS
 No errors occur.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR atan (),
 .BR atanf (),
-and
 .BR atanl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
