--- a/man3/basename.3
+++ b/man3/basename.3
@@ -127,12 +127,18 @@ return pointers to null-terminated strings.
 (Do not pass these pointers to
 .BR free (3).)
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR basename ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw22 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR basename (),
 .BR dirname ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
