bcopy.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/bcopy.3
+++ b/man3/bcopy.3
@@ -52,10 +52,17 @@ The result is correct, even when both areas overlap.
 .SH RETURN VALUE
 None.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR bcopy ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.3BSD.
 This function is deprecated (marked as LEGACY in POSIX.1-2001): use
