--- a/man3/bzero.3
+++ b/man3/bzero.3
@@ -48,10 +48,17 @@ to zero (bytes containing \(aq\\0\(aq).
 .SH RETURN VALUE
 None.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR bzero ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.3BSD.
 This function is deprecated (marked as LEGACY in POSIX.1-2001): use
