byteorder.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/byteorder.3
+++ b/man3/byteorder.3
@@ -74,14 +74,20 @@ On the i386 the host byte order is Least Significant Byte first,
 whereas the network byte order, as used on the Internet, is Most
 Significant Byte first.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw34 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR htonl (),
 .BR htons (),
 .BR ntohl (),
-and
 .BR ntohs ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 
