--- a/man3/mbtowc.3
+++ b/man3/mbtowc.3
@@ -110,6 +110,18 @@ is NULL, the
 function
 returns nonzero if the encoding
 has nontrivial shift state, or zero if the encoding is stateless.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mbtowc ()
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
