makedev.3: ATTRIBUTES: Note macros that are thread-safe
The macros makedev(), major() and minor() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/makedev.3
+++ b/man3/makedev.3
@@ -59,6 +59,20 @@ they return, respectively, the major and minor components.
 These macros can be useful to, for example,
 decompose the device IDs in the structure returned by
 .BR stat (2).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR makedev (),
+.BR major (),
+.BR minor ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The
 .BR makedev (),
