gnu_get_libc_version.3: ATTRIBUTES: Note functions that are thread-safe
The functions gnu_get_libc_version() and gnu_get_libc_release()
are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/gnu_get_libc_version.3
+++ b/man3/gnu_get_libc_version.3
@@ -46,6 +46,19 @@ This will be a string such as
 .IR "stable" .
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw23 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR gnu_get_libc_version (),
+.BR gnu_get_libc_release ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 These functions are glibc-specific.
 .SH EXAMPLE
