--- a/man3/iswdigit.3
+++ b/man3/iswdigit.3
@@ -66,6 +66,18 @@ if
 is a wide character
 belonging to the wide-character class "digit".
 Otherwise, it returns zero.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR iswdigit ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
