--- a/man3/cbrt.3
+++ b/man3/cbrt.3
@@ -88,13 +88,19 @@ is returned.
 .SH ERRORS
 No errors occur.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR cbrt (),
 .BR cbrtf (),
-and
 .BR cbrtl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .\" .BR cbrt ()
