copysign.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/copysign.3
+++ b/man3/copysign.3
@@ -93,13 +93,19 @@ is returned.
 .SH ERRORS
 No errors occur.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw36 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR copysign (),
 .BR copysignf (),
-and
 .BR copysignl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .\" 4.3BSD.
