--- a/man3/daemon.3
+++ b/man3/daemon.3
@@ -89,10 +89,17 @@ to any of the errors specified for the
 and
 .BR setsid (2).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR daemon ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 Not in POSIX.1-2001.
 A similar function appears on the BSDs.
