des_crypt.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/des_crypt.3
+++ b/man3/des_crypt.3
@@ -132,13 +132,19 @@ is false only for the first two statuses.
 These functions are present in
 glibc 2.1 and later.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ecb_crypt (),
-.BR cbc_crypt (),
-and
+.BR cbc_crypt ()
 .BR des_setparity ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.3BSD.
 Not in POSIX.1-2001.
