difftime.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/difftime.3
+++ b/man3/difftime.3
@@ -46,10 +46,17 @@ Each of the times is specified in calendar time, which means its
 value is a measurement (in seconds) relative to the
 Epoch, 1970-01-01 00:00:00 +0000 (UTC).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR difftime ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, C89, C99.
 .SH NOTES
