--- a/man3/dirfd.3
+++ b/man3/dirfd.3
@@ -85,10 +85,17 @@ does not refer to a valid directory stream.
 The implementation does not support the association of a file
 descriptor with a directory.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR dirfd ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2008.
 This function was a BSD extension, present in 4.3BSD-Reno, not in 4.2BSD.
