--- a/man3/div.3
+++ b/man3/div.3
@@ -89,14 +89,20 @@ of the same type as the function arguments.
 .SH RETURN VALUE
 The \fIdiv_t\fP (etc.) structure.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw33 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR div (),
 .BR ldiv (),
 .BR lldiv (),
-and
 .BR imaxdiv ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, C89. C99.
 The functions
