--- a/man3/drand48_r.3
+++ b/man3/drand48_r.3
@@ -96,8 +96,15 @@ or
 .SH RETURN VALUE
 The return value is 0.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.ad l
+.TS
+allbox;
+lbw38 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR drand48_r (),
 .BR erand48_r (),
 .BR lrand48_r (),
@@ -106,9 +113,10 @@ The
 .BR jrand48_r (),
 .BR srand48_r (),
 .BR seed48_r (),
-and
 .BR lcong48_r ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
+.ad
 .SH CONFORMING TO
 These functions are GNU extensions and are not portable.
 .SH SEE ALSO
