--- a/man3/dysize.3
+++ b/man3/dysize.3
@@ -49,10 +49,17 @@ The formula is defined in the macro
 also found in
 .IR <time.h> .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR dysize ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function occurs in SunOS 4.x.
 .SH NOTES
