ecvt.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ecvt.3
+++ b/man3/ecvt.3
@@ -108,12 +108,18 @@ The static string is overwritten by each call to
 or
 .BR fcvt ().
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR ecvt ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR ecvt (),
 .BR fcvt ()
-functions are not thread-safe.
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 SVr2;
 marked as LEGACY in POSIX.1-2001.
