--- a/man3/encrypt.3
+++ b/man3/encrypt.3
@@ -122,18 +122,22 @@ On success, it is unchanged.
 The function is not provided.
 (For example because of former USA export restrictions.)
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR encrypt ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw23 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR encrypt (),
 .BR setkey ()
-functions are not thread-safe.
-.LP
-The
-.BR encrypt_r ()
-and
+T}	Thread safety	MT-Unsafe
+T{
+.BR encrypt_r (),
 .BR setkey_r ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The functions
 .BR encrypt ()
