--- a/man3/des_crypt.3
+++ b/man3/des_crypt.3
@@ -136,12 +136,12 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw24 lb lb
+lbw25 lb lb
 l l l.
 Interface	Attribute	Value
 T{
 .BR ecb_crypt (),
-.BR cbc_crypt ()
+.BR cbc_crypt (),
 .BR des_setparity ()
 T}	Thread safety	MT-Safe
 .TE
