gamma.3: ATTRIBUTES: Note functions that are not thread-safe
The functions gamma(), gammaf() and gammal() are not thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/gamma.3
+++ b/man3/gamma.3
@@ -62,6 +62,20 @@ See
 .SH ERRORS
 See
 .BR lgamma (3).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR gamma (),
+.BR gammaf (),
+.BR gammal ()
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 Because of historical variations in behavior across systems,
 this function is not specified in any standard.
