getfsent.3: ATTRIBUTES: Note functions that are not thread-safe
The functions setfsent(), getfsent(), endfsent(), getfsspec()
and getfsfile() are not thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getfsent.3
+++ b/man3/getfsent.3
@@ -112,6 +112,22 @@ Upon failure or end-of-file, these functions return NULL and 0, respectively.
 .\" The
 .\" .BR getfsent ()
 .\" function appeared in 4.0BSD; the other four functions appeared in 4.3BSD.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw35 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR setfsent (),
+.BR getfsent (),
+.BR endfsent (),
+.BR getfsspec (),
+.BR getfsfile ()
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 These functions are not in POSIX.1-2001.
 Several operating systems have them, for example,
