mtrace.3: ATTRIBUTES: Note functions that are not thread-safe
The functions mtrace() and muntrace() are not thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/mtrace.3
+++ b/man3/mtrace.3
@@ -75,6 +75,19 @@ In set-user-ID and set-group-ID programs,
 is ignored, and
 .BR mtrace ()
 has no effect.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw20 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mtrace (),
+.BR muntrace ()
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 These functions are GNU extensions.
 .SH NOTES
