--- a/man3/wctomb.3
+++ b/man3/wctomb.3
@@ -82,10 +82,17 @@ is NULL, the
 function returns nonzero if the
 encoding has nontrivial shift state, or zero if the encoding is stateless.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR wctomb ()
-function is not thread-safe.
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
