getopt.3: ATTRIBUTES: Note functions that are not thread-safe
The functions getopt(), getopt_long() and getopt_long_only() are
not thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getopt.3
+++ b/man3/getopt.3
@@ -315,6 +315,20 @@ wildcard expansion and so should not be considered as options.
 This behavior was removed in
 .BR bash (1)
 version 2.01, but the support remains in glibc.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getopt (),
+.BR getopt_long (),
+.BR getopt_long_only ()
+T}	Thread safety	MT-Unsafe env
+.TE
 .SH CONFORMING TO
 .TP
 .BR getopt ():
