--- a/man3/wcstoimax.3
+++ b/man3/wcstoimax.3
@@ -47,16 +47,18 @@ and
 .IR uintmax_t ,
 respectively.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR wcstoimax ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR wcstoimax (),
 .BR wcstoumax ()
-functions are thread-safe with exceptions.
-These functions can be safely used in multithreaded applications,
-as long as
-.BR setlocale (3)
-is not called to change the locale during their execution.
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99.
 .SH SEE ALSO
