--- a/man3/euidaccess.3
+++ b/man3/euidaccess.3
@@ -71,12 +71,18 @@ The
 .BR eaccess ()
 function was added to glibc in version 2.4.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR euidaccess ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw23 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR euidaccess (),
 .BR eaccess ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 These functions are nonstandard.
 Some other systems have an
