--- a/man3/exit.3
+++ b/man3/exit.3
@@ -88,7 +88,18 @@ The
 .BR exit ()
 function does not return.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR exit ()
+T}	Thread safety	MT-Unsafe
+.TE
+.PP
 The
 .BR exit ()
 function uses a global variable that is not protected,
