expm1.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/expm1.3
+++ b/man3/expm1.3
@@ -134,13 +134,19 @@ is raised.
 .\" POSIX.1 specifies an optional range error (underflow) if
 .\" x is subnormal.  Glibc does not implement this.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR expm1 (),
 .BR expm1f (),
-and
 .BR expm1l ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .\" BSD.
