fcloseall.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fcloseall.3
+++ b/man3/fcloseall.3
@@ -53,7 +53,18 @@ on error,
 .B EOF
 is returned.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fcloseall ()
+T}	Thread safety	MT-Unsafe
+.TE
+.PP
 The
 .BR fcloseall ()
 function does not lock the streams, so it is not thread-safe.
