ferror.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ferror.3
+++ b/man3/ferror.3
@@ -104,14 +104,21 @@ return \-1 and set
 to
 .BR EBADF .)
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw19 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR clearerr (),
 .BR feof (),
+.br
 .BR ferror (),
-and
 .BR fileno ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The functions
 .BR clearerr (),
