ffs.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ffs.3
+++ b/man3/ffs.3
@@ -89,13 +89,19 @@ These functions return the position of the first bit set,
 or 0 if no bits are set in
 .IR i .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw22 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ffs (),
 .BR ffsl (),
-and
 .BR ffsll ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR ffs ():
 4.3BSD, POSIX.1-2001.
