finite.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/finite.3
+++ b/man3/finite.3
@@ -119,19 +119,27 @@ is positive infinity, \-1 if
 .I x
 is negative infinity, and 0 otherwise.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw31 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR finite (),
 .BR finitef (),
 .BR finitel (),
+.br
 .BR isinf (),
 .BR isinff (),
 .BR isinfl (),
+.br
 .BR isnan (),
 .BR isnanf (),
-and
 .BR isnanl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH NOTES
 Note that these functions are obsolete.
 C99 defines macros
