--- a/man3/flockfile.3
+++ b/man3/flockfile.3
@@ -125,13 +125,19 @@ function returns zero for success
 .SH ERRORS
 None.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw29 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR flockfile (),
 .BR ftrylockfile (),
-and
 .BR funlockfile ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH AVAILABILITY
