floor.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/floor.3
+++ b/man3/floor.3
@@ -78,13 +78,19 @@ itself is returned.
 No errors occur.
 POSIX.1-2001 documents a range error for overflows, but see NOTES.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR floor (),
 .BR floorf (),
-and
 .BR floorl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
