fmin.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fmin.3
+++ b/man3/fmin.3
@@ -56,13 +56,19 @@ No errors occur.
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR fmin (),
 .BR fminf (),
-and
 .BR fminl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH SEE ALSO
