--- a/man3/fmtmsg.3
+++ b/man3/fmtmsg.3
@@ -223,7 +223,22 @@ is the string printed when a message of this class is processed by
 .BR fmtmsg ()
 is provided in glibc since version 2.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lbw23
+l l l.
+Interface	Attribute	Value
+T{
+.BR fmtmsg ()
+T}	Thread safety	T{
+glibc >= 2.16: MT-Safe
+.br
+glibc < 2.16: MT-Unsafe
+T}
+.TE
+.PP
 Before glibc 2.16, the
 .BR fmtmsg ()
 function uses a static variable that is not protected,
