iswlower.3: ATTRIBUTES: Note function that is thread safe with exceptions
The function iswlower() is thread safe with exceptions.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/iswlower.3
+++ b/man3/iswlower.3
@@ -73,6 +73,18 @@ if
 is a wide character
 belonging to the wide-character class "lower".
 Otherwise, it returns zero.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR iswlower ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
