--- a/man3/iswprint.3
+++ b/man3/iswprint.3
@@ -45,6 +45,18 @@ function returns nonzero if
 is a
 wide character belonging to the wide-character class "print".
 Otherwise, it returns zero.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR iswprint ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
