--- a/man3/iswpunct.3
+++ b/man3/iswpunct.3
@@ -57,6 +57,18 @@ if
 is a wide-character
 belonging to the wide-character class "punct".
 Otherwise, it returns zero.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR iswpunct ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
