fpclassify.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fpclassify.3
+++ b/man3/fpclassify.3
@@ -116,15 +116,23 @@ is positive infinity, and \-1 if
 .I x
 is negative infinity.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.ad l
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR fpclassify (),
 .BR isfinite (),
 .BR isnormal (),
 .BR isnan (),
-and
 .BR isinf ()
-macros are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
+.ad
 .SH CONFORMING TO
 C99, POSIX.1.
 
