ftime.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ftime.3
+++ b/man3/ftime.3
@@ -68,10 +68,17 @@ fields are unspecified; avoid relying on them.
 This function always returns 0.
 (POSIX.1-2001 specifies, and some systems document, a \-1 error return.)
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ftime ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.2BSD, POSIX.1-2001.
 POSIX.1-2008 removes the specification of
