futimes.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/futimes.3
+++ b/man3/futimes.3
@@ -91,12 +91,18 @@ is available since glibc 2.6, and is implemented using the
 .BR utimensat (2)
 system call, which is supported since kernel 2.6.22.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR futimes ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw20 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR futimes (),
 .BR lutimes ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 These functions are not specified in any standard.
 Other than Linux, they are available only on the BSDs.
