--- a/man3/getauxval.3
+++ b/man3/getauxval.3
@@ -190,10 +190,17 @@ The
 .BR getauxval ()
 function was added to glibc in version 2.16.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getauxval ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function is a nonstandard glibc extension.
 .SH NOTES
