--- a/man3/getcontext.3
+++ b/man3/getcontext.3
@@ -152,11 +152,18 @@ appropriately.
 None defined.
 .SH ATTRIBUTES
 .SS Multithreading (see pthreads(7))
-The
-.BR getcontext ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw26 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getcontext (),
 .BR setcontext ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SUSv2, POSIX.1-2001.
 POSIX.1-2008 removes the specification of
