--- a/man3/getdirentries.3
+++ b/man3/getdirentries.3
@@ -62,10 +62,17 @@ is set appropriately.
 .SH ERRORS
 See the Linux library source code for details.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getdirentries ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 Not in POSIX.1-2001.
 Present on the BSDs, and a few other systems.
