getdtablesize.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getdtablesize.3
+++ b/man3/getdtablesize.3
@@ -67,10 +67,17 @@ can return any of the errors described for
 .BR getrlimit (2);
 see NOTES below.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getdtablesize ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.4BSD (the
 .BR getdtablesize ()
