getloadavg.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getloadavg.3
+++ b/man3/getloadavg.3
@@ -63,10 +63,17 @@ the number of samples actually retrieved is returned.
 .SH VERSIONS
 This function is available in glibc since version 2.2.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getloadavg ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 Not in POSIX.1-2001.
 Present on the BSDs and Solaris.
