--- a/man3/getgrent.3
+++ b/man3/getgrent.3
@@ -164,16 +164,21 @@ Insufficient buffer space supplied.
 .I /etc/group
 local group database file
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw22 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getgrent ()
-function is not thread-safe.
-.LP
-The
-.BR setgrent ()
-and
+T}	Thread safety	MT-Unsafe
+T{
+.BR setgrent (),
 .BR endgrent ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
 .SH SEE ALSO
