getgrnam.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getgrnam.3
+++ b/man3/getgrnam.3
@@ -209,18 +209,22 @@ Insufficient buffer space supplied.
 .I /etc/group
 local group database file
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR getgrnam ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw26 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getgrnam (),
 .BR getgrgid ()
-functions are not thread-safe.
-.LP
-The
-.BR getgrnam_r ()
-and
+T}	Thread safety	MT-Unsafe
+T{
+.BR getgrnam_r (),
 .BR getgrgid_r ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
 .SH NOTES
