--- a/man3/iswupper.3
+++ b/man3/iswupper.3
@@ -67,6 +67,18 @@ function returns nonzero if
 is a wide character
 belonging to the wide-character class "upper".
 Otherwise, it returns zero.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR iswupper ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
