--- a/man3/iswxdigit.3
+++ b/man3/iswxdigit.3
@@ -58,6 +58,18 @@ function returns nonzero if
 is a wide character
 belonging to the wide-character class "xdigit".
 Otherwise, it returns zero.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR iswxdigit ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
